--- a/tutorial.html
+++ b/tutorial.html
@@ -62,15 +62,16 @@
                 </div>
             </div>
         </nav>
-       <div class="alert alert-warning alert-dismissible fade show" role="alert">
-  <strong>Holy guacamole!</strong> You should check in on some of those fields below.
-  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-</div>
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="#">Blog</a></li>
                 <li class="breadcrumb-item"><a href="#">Tutorial</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Bootstarp in one blog <span class="badge text-bg-secondary">New</span></li>
+                <li class="breadcrumb-item active" aria-current="page">Bootstarp in one blog <span
+                        class="badge text-bg-secondary">New</span></li>
             </ol>
         </nav>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
