--- a/project.html/SJ.html
+++ b/project.html/SJ.html
@@ -14,7 +14,8 @@
 </head>
 
 <body>
-    <nav class="navbar d-flex justify-content-md-end navbar-expand-lg bg-danger-subtle px-5 " aria-label="Thirteenth navbar example">
+    <nav class="navbar d-flex justify-content-md-end navbar-expand-lg bg-danger-subtle px-5 "
+        aria-label="Thirteenth navbar example">
         <div class="container-fluid"> <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarsExample11" aria-controls="navbarsExample11" aria-expanded="false"
                 aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
